# cloudmark-studio

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-release.yml
src/: App.tsx  index.css
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  lib.rs
src-tauri/src/imaging/: compress.rs
src-tauri/src/imm/: client.rs
src-tauri/src/oss/: client.rs  mod.rs  sign.rs
src-tauri/src/watermark/: encode.rs
src-tauri/tests/: compress_test.rs  oss_integration.rs  query_task.rs
src/components/: DecodePage.tsx  DropZone.tsx  HistoryPage.tsx  ImageCard.tsx  OssBrowserPage.tsx  SettingsPanel.tsx  ToolsPage.tsx  WatermarkPage.tsx
src/hooks/: useConfig.ts  useDarkMode.ts
src/lib/: tauri.ts
