[package]
name = "cloudmark-studio"
version = "0.1.0"
description = "Image processing toolkit with OSS upload and blind watermark"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for OSS API
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }

# OSS signing
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
base64 = "0.22"
chrono = "0.4"
url = "2"
uuid = { version = "1", features = ["v4"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Image processing (compression & format conversion)
image = { version = "0.25", features = ["png", "jpeg", "webp"] }
webp = "0.3"
oxipng = "9"

# Config storage
dirs = "6"
arboard = "3"
